add updates in openapi queries videos
